--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/DiFernando11/AppMoviesApiRest/issues"
   },
-  "homepage": "https://github.com/DiFernando11/AppMoviesApiRest#readme"
+  "homepage": "https://github.com/DiFernando11/AppMoviesApiRest#readme",
+  "dependencies": {
+    "axios": "^0.27.2"
+  }
 }
